data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2077.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\94\80\80\80\00\01\03"
    "\65\6e\76\0c\66\75\6e\63\5f\69\33\32\5f\69\33\32"
    "\00\00\03\82\80\80\80\00\01\01\0a\94\80\80\80\00"
    "\01\8e\80\80\80\00\00\41\01\04\7f\41\01\10\00\05"
    "\41\02\0b\0b"
  )
""
)